# snipster

./: .gitignore  Dockerfile  Dockerfile.backend  Makefile  README.md  alembic.ini  debug_fuzzy.py  fly.toml  pyproject.toml  render.yaml  snippet.sqlite.bkup
.github/workflows/: publish.yaml  reflex-deploy.yaml  test.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 5876d34b99f0_create_snippets_table.py  9294fad3ea8f_initial_migration.py  93fc8eabfeeb_create_snippets_table.py  943edfdd253d_create_snippets_table.py
src/snipster/: __main__.py  api.py  cli.py  cli_snippet_service.py  db.py  models.py  repo.py
tests/: conftest.py  test_api.py  test_cli.py  test_model.py  test_models.py  test_repos.py
ui/: .dockerignore  .gitignore  .reflex-cloud-env  Dockerfile.frontend  fly.toml  pyproject.toml  requirements.txt  rxconfig.py
ui/ui/: ui.py
