[project]
name = "snipster-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brandon Brown", email = "afrobot@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[all]>=0.116.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.13.0",
    "reflex>=0.8.6",
    "rich>=14.0.0",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
]

[project.scripts]
snipster = "snipster.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snipster"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]
