[project]
name = "snipster-frontend"
version = "0.1.0"
description = "Snipster Reflex frontend application"
authors = [
    {name = "Pybites Cohort"}
]
dependencies = [
    "reflex==0.8.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]  # Tells Hatchling to package everything in current directory

[tool.uv]
dev-dependencies = []
